<resources>
    <string name="app_name">IslamiApp</string>
    <string name="splash_background">Splash Background</string>
    <string name="quran">Quran</string>
    <string name="ahadeeth">Ahadeeth</string>
    <string name="sebha">Sebha</string>
    <string name="radio">Radio</string>
    <string name="quran_logo">Quran Logo</string>
    <string name="surah_name">Surah Name</string>
    <string name="verses_number">Verses Number</string>
    <string name="play_icon">Play Icon</string>
    <string name="el_ahadeeth">Ahadeeth</string>
    <string name="radio_image">Radio Image</string>
    <string name="hadeeth_logo">Hadeeth Logo</string>
    <string name="quran_radio_station">Quran Radio Station</string>
    <string name="previous_play_icon">Previous Play Icon</string>
    <string name="next_play_icon">Next Play Icon</string>
    <string name="channel_name">Radio Notification</string>
    <string name="channel_description">Radio Station</string>
    <string name="tasbeeh_numbers">Tasbeeh Numbers</string>
    <string name="sobhan_allah">Sobhan Allah</string>
    <string name="al_hamdo_llellah">Al Hamdo Llellah</string>
    <string name="allah_akaber">Allah Akaber</string>
    <string name="la_elaah_ela_allah">La Elaah Ela Allah, Wahedaho La Shareek Lah</string>
</resources>