<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.home.quran.ui.QuranFragment">

    <TextView
        android:id="@+id/islami_tv"
        style="@style/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/quran_logo_tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/quran_logo"
        android:src="@drawable/quran_screen_logo"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/islami_tv"/>

    <View
        android:id="@+id/horizontal_line_one"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginTop="30dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quran_logo_tv" />

    <View
        android:id="@+id/horizontal_line_two"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginTop="45dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_line_one" />

    <View
        android:id="@+id/vertical_line_one"
        android:layout_width="4dp"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_line_one" />

    <TextView
        android:id="@+id/suruah_name_tv"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/surah_name"
        app:layout_constraintEnd_toEndOf="@+id/vertical_line_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vertical_line_one" />

    <TextView
        android:id="@+id/ayat_no_tv"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/verses_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_line_one"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_line_one" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/surahs_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_line_two"
        tools:listitem="@layout/surah_item" />

</androidx.constraintlayout.widget.ConstraintLayout>